--- a/game-builder-crew/pyproject.toml
+++ b/game-builder-crew/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.12"
-crewai = "^0.11.0"
+crewai = "0.1.24"
 python-dotenv = "1.0.0"
+langchain-community = "^0.0.20"
+pygame = "^2.5.2"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
